# mishegos

./: .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CODEOWNERS  Dockerfile  Makefile  README.md  workers.spec
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: adding_a_worker.md  output_cohorts_format.md
scripts/docker/: install_dev_deps.sh  install_runtime_deps.sh  install_rust.sh
src/analysis/: analysis  passes.yml
src/analysis/pass/dedupe/: dedupe  spec.yml
src/analysis/pass/filter-all-failure/: filter-all-failure  spec.yml
src/analysis/pass/filter-all-success/: filter-all-success  spec.yml
src/analysis/pass/filter-any-failure/: filter-any-failure  spec.yml
src/analysis/pass/normalize/: normalize  (+1 more)
src/convert_to_JSON/: setup.py
src/include/: mish_common.h
src/mish2json/: Makefile  cohort.py  kaitai_source_code.ksy  mish2json  setup.py
src/mish2jsonl/: Makefile  cohorts.ksy  mish2jsonl  mish2jsonl.c  mish2jsonl.h
src/mishegos/: Makefile  analysis.c  analysis.h  cohorts.c  cohorts.h  getrandom.c  mish_core.h  mishegos.c  mutator.c  mutator.h
src/mishmat/: mishmat
src/worker/: Makefile  worker.c  worker.h
src/worker/bddisasm/: Makefile  bddisasm.c
src/worker/bfd/: Makefile  bfd.c
src/worker/capstone/: Makefile  capstone.c
src/worker/dynamorio/: Makefile  dynamorio.c
src/worker/fadec/: Makefile  fadec.c
src/worker/ghidra/: .gitignore  CMakeLists.txt  Makefile  ghidra.cc  sleighMishegos.cc  sleighMishegos.hh
src/worker/iced/: Cargo.toml  Makefile  build.rs
src/worker/iced/src/: lib.rs  mishegos.rs
src/worker/llvm/: Makefile  llvm.c
src/worker/udis86/: Makefile  udis86.c
src/worker/xed/: Makefile  xed.c
src/worker/yaxpeax-x86/: .gitignore  Cargo.toml  Makefile  build.rs
src/worker/yaxpeax-x86/src/: lib.rs
src/worker/zydis/: Makefile  zydis.c
tmp/: mishegosend  mishegostry  mishegostry2  mishegostry3
(+35 files in other folders)
