[package]
name = "yaxpeax-x86-mishegos"
version = "0.1.0"
authors = ["iximeow <git@iximeow.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
yaxpeax-x86 = { version = "1.0.3" }
yaxpeax-arch = "0.0.5"

[build-dependencies]
bindgen = "*"

[profile.release]
lto = true
opt-level = 3
